# shotcaller-minigene

./: .gitignore  Cargo.toml  README.md  build.sh  contributing.md  push.sh
assets/: effector_defs.yaml  hero_defs.yaml  item_defs.yaml  keymap.yaml  leader_defs.yaml  map.txt  map2x.txt  map4x.txt  skill_defs.yaml  stat_defs.yaml
assets/tilemap/: License.txt
doc/: create_item.md  create_leader.md
output/: index.html  index.js  shotcaller.js  shotcaller_bg.wasm  worker.js
src/: components.rs  events.rs  heroes.rs  ids.rs  main.rs  nakama.rs  render_map.rs  resources.rs  unit_orders.rs  utils.rs
src/states/: default.rs  load_game.rs  mod.rs
src/systems/: additional_attack.rs  additional_defense.rs  air_corrosion.rs  amove_order.rs  aoe_damage.rs  back_endurance.rs  battle_hunger.rs  bear_spawner.rs  caustic_scales.rs  creep_spawner.rs  damage_entity.rs  dark_presence.rs  elephant_spawner.rs  fog_of_vision.rs  game_stats_updater.rs  gold.rs  handle_action_points.rs  hero1_proximity_attack.rs  hero1_simple_ai.rs  hero1_simple_movement.rs  hero2_simple_movement.rs  hero_teleport.rs  holdpos_order.rs  idle_order.rs  item_purchasing.rs  kill_entity.rs  leader1_proximity_attack.rs  leader1_simple_movement.rs  leader2_simple_movement.rs  leader_respawn_driver.rs  leader_teleport.rs  mmove_order.rs  mod.rs  mouse_select.rs  movement.rs  nature_summon.rs  order_completion.rs  order_generation.rs  pawn_spawner.rs  proximity_attack.rs  (+31 more)
