[package]
name = "shotcaller"
version = "0.1.0"
authors = ["Joël Lupien (Jojolepro) <jojolepro@jojolepro.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bracket-lib = { version = "0.8.1", features = ["specs", "threaded"] }
bracket-lib = { version = "0.8.1", default-features = false, features = ["specs", "threaded", "crossterm"] }
specs_declaration = { path = "../specs_declaration" }
game_features = { git = "https://github.com/jojolepro/game_features" }
specs = "0.16.1"
specs-derive = "0.4.1"
hibitset = "0.5"
derive-new = "0.5"
