[package]
name = "shotcaller"
version = "0.3.0"
authors = ["Joël Lupien (Jojolepro) <jojolepro@jojolepro.com>"]
edition = "2018"

[features]
default = ["opengl"]
terminal = ["minigene/terminal"]
opengl = ["minigene/opengl"]
wasm = ["wasm-bindgen", "minigene/wasm", "console_error_panic_hook"]

[dependencies]
#minigene = { path = "../minigene", default-features = false }
#minigene = { git = "https://github.com/jojolepro/minigene", default-features = false, rev = "ec6d979" }
minigene = { git = "https://github.com/jojolepro/minigene", default-features = false }
wasm-bindgen = { version = "0.2.68", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.14"
