[package]
name = "shotcaller"
version = "0.4.0"
authors = ["Joël Lupien (Jojolepro) <jojolepro@jojolepro.com>"]
edition = "2018"

[features]
default = ["opengl"]
terminal = ["minigene/terminal"]
opengl = ["minigene/opengl"]
# Note: A rendering backend must still be specified if running headlessly
headless = ["minigene/headless"]
wasm = ["wasm-bindgen", "minigene/wasm", "console_error_panic_hook", "opengl"]

[dependencies]
#minigene = { path = "../minigene", default-features = false }
#minigene = { git = "https://github.com/jojolepro/minigene", default-features = false, rev = "a2f5c3bca0903acae760a763152ccd45ccb53948" }
minigene = { git = "https://github.com/jojolepro/minigene", branch = "master", default-features = false }
wasm-bindgen = { version = "0.2.68", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.14"
lazy_static = "1.4.0"
nakama-rs = "0.1"
nanoserde = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
